src/api/java5/jna-dds/dds2tmptmp.h

#define DDS_HANDLE_NIL 0
/* Handles are opaque pointers to implementation types */
typedef uint64_t dds_instance_handle_t;
/**
 * dds_instance_state_t
 * \brief defines the state of the instance
 * -# DDS_IST_ALIVE - Samples received for the instance from the live data writers
 * -# DDS_IST_NOT_ALIVE_DISPOSED - Instance was explicitly disposed by the data writer
 * -# DDS_IST_NOT_ALIVE_NO_WRITERS - Instance has been declared as not alive by data reader
 *                                   as there are no live data writers writing that instance
 */
typedef enum dds_instance_state
{
  DDS_IST_ALIVE = DDS_ALIVE_INSTANCE_STATE,
  DDS_IST_NOT_ALIVE_DISPOSED = DDS_NOT_ALIVE_DISPOSED_INSTANCE_STATE,
  DDS_IST_NOT_ALIVE_NO_WRITERS = DDS_NOT_ALIVE_NO_WRITERS_INSTANCE_STATE
}
dds_instance_state_t;
/**
 * @brief Suspends the publications of the Publisher
 *
 * This operation is a hint to the Service so it can optimize its performance by e.g., collecting
 * modifications to DDS writers and then batching them. The Service is not required to use the hint.
 *
 * Every invocation of this operation must be matched by a corresponding call to @see dds_resume
 * indicating that the set of modifications has completed.
 *
 * @param[in]  publisher The publisher for which all publications will be suspended
 *
 * @returns >0 - Success.
 * @returns <0 - Failure (use dds_err_nr() to get error value).
 *
 * @retval DDS_RETCODE_OK
 *                Publications suspended successfully.
 * @retval DDS_RETCODE_BAD_PARAMETER
 *                The pub parameter is not a valid publisher.
 * @retval DDS_RETCODE_UNSUPPORTED
 *                Operation is not supported
 */
 dds_return_t
dds_suspend(
         dds_entity_t publisher);
/**
 * @brief Resumes the publications of the Publisher
 *
 * This operation is a hint to the Service to indicate that the application has completed changes
 * initiated by a previous @see suspend. The Service is not required to use the hint.
 *
 * The call to resume_publications must match a previous call to @see suspend_publications.
 *
 * @param[in]  publisher The publisher for which all publications will be resumed
 *
 * @returns >0 - Success.
 * @returns <0 - Failure (use dds_err_nr() to get error value).
 *
 * @retval DDS_RETCODE_OK
 *                Publications resumed successfully.
 * @retval DDS_RETCODE_BAD_PARAMETER
 *                The pub parameter is not a valid publisher.
 * @retval DDS_RETCODE_PRECONDITION_NOT_MET
 *                No previous matching @see dds_suspend.
 * @retval DDS_RETCODE_UNSUPPORTED
 *                Operation is not supported.
 */
 dds_return_t
dds_resume(
         dds_entity_t publisher);
/**
 * @brief Waits at most for the duration timeout for acks for data in the publisher or writer.
 *
 * This operation blocks the calling thread until either all data written by the publisher
 * or writer is acknowledged by all matched reliable reader entities, or else the duration
 * specified by the timeout parameter elapses, whichever happens first.
 *
 * @param[in]  pub_or_w   The publisher or writer whose acknowledgements must be waited for.
 *
 * @returns >0 - Success.
 * @returns <0 - Failure (use dds_err_nr() to get error value).
 *
 * @retval DDS_RETCODE_OK
 *                All acknowledgements successfully received with the timeout.
 * @retval DDS_RETCODE_BAD_PARAMETER
 *                The pub_or_w parameter is not a valid publisher or writer.
 * @retval DDS_RETCODE_TIMEOUT
 *                Timeout expired before all acknowledgements from reliable reader entities were received.
 * @retval DDS_RETCODE_UNSUPPORTED
 *                Operation is not supported.
 */
 dds_return_t
dds_wait_for_acks(
         dds_entity_t publisher_or_writer,
         dds_duration_t timeout);
/**
 * @brief Creates a new instance of a DDS reader
 *
 * @param[in]  participant_or_subscriber The participant or subscriber on which the reader is being created
 *
 * @param[in]  topic The topic to read
 *
 * @param[in]  qos The QoS to set on the new reader (can be NULL)
 *
 * @param[in]  listener Any listener functions associated with the new reader (can be NULL)
 *
 * @returns >0 - Success (valid handle of a reader entity)
 * @returns <0 - Failure (use dds_err_nr() to get error value)
 *
 */
 dds_entity_t
dds_create_reader(
         dds_entity_t participant_or_subscriber,
         dds_entity_t topic,
         const dds_qos_t *qos,
         const dds_listener_t *listener);
/**
 * @brief Creates a new instance of a DDS writer
 *
 * @param[in]  participant_or_publisher The participant or publisher on which the writer is being created
 * @param[in]  topic The topic to write
 * @param[in]  qos The QoS to set on the new writer (can be NULL)
 * @param[in]  listener Any listener functions associated with the new writer (can be NULL)
 *
 * @returns >0 - Success (valid handle of a writer entity)
 * @returns <0 - Failure (use dds_err_nr() to get error value)
 */
 dds_entity_t
dds_create_writer(
             dds_entity_t participant_or_publisher,
             dds_entity_t topic,
         const dds_qos_t *qos,
         const dds_listener_t *listener);
/*
  Writing data (and variants of it) is straightforward. The first set
  is equivalent to the second set with -1 passed for "timestamp",
  meaning, substitute the result of a call to time(). The dispose
  and unregister operations take an object of the topic's type, but
  only touch the key fields; the remained may be undefined.
*/
/**
 * Description : Registers an instance with a key value to the data writer
 *
 * Arguments :
 *   -# wr The writer to which instance has be associated
 *   -# data Instance with the key value
 *   -# Returns an instance handle that could be used for successive write & dispose operations or
 *      NULL, if handle is not allocated
 */
 dds_return_t
dds_register_instance (
         dds_entity_t writer,
         dds_instance_handle_t *handle,
         const void *data);
/**
 * Description : Unregisters an instance with a key value from the data writer. Instance can be identified
 *               either from data sample or from instance handle (at least one must be provided).
 *
 * Arguments :
 *   -# wr The writer to which instance is associated
 *   -# data Instance with the key value (can be NULL if handle set)
 *   -# handle Instance handle (can be DDS_HANDLE_NIL if data set)
 *   -# Returns 0 on success, or non-zero value to indicate an error
 *
 * Note : If an unregistered key ID is passed as instance data, an error is logged and not flagged as return value
 */
 dds_return_t
dds_unregister_instance(
         dds_entity_t writer,
         const void *data);
 dds_return_t
dds_unregister_instance_ih(
        dds_entity_t writer,
        dds_instance_handle_t handle);
  /**
 * Description : Unregisters an instance with a key value from the data writer. Instance can be identified
 *               either from data sample or from instance handle (at least one must be provided).
 *
 * Arguments :
 *   -# wr The writer to which instance is associated
 *   -# data Instance with the key value (can be NULL if handle set)
 *   -# handle Instance handle (can be DDS_HANDLE_NIL if data set)
 *   -# timestamp used at registration.
 *   -# Returns 0 on success, or non-zero value to indicate an error
 *
 * Note : If an unregistered key ID is passed as instance data, an error is logged and not flagged as return value
 */
 dds_return_t
dds_unregister_instance_ts(
        dds_entity_t writer,
        const void *data,
        dds_time_t timestamp);
 dds_return_t
dds_unregister_instance_ih_ts(
        dds_entity_t writer,
        dds_instance_handle_t handle,
        dds_time_t timestamp);
/**
 * @brief This operation modifies and disposes a data instance.
 *
 * This operation requests the Data Distribution Service to modify the instance and
 * mark it for deletion. Copies of the instance and its corresponding samples, which are
 * stored in every connected reader and, dependent on the QoS policy settings (also in
 * the Transient and Persistent stores) will be modified and marked for deletion by
 * setting their dds_instance_state_t to DDS_IST_NOT_ALIVE_DISPOSED.
 *
 * <b><i>Blocking</i></b><br>
 * If the history QoS policy is set to DDS_HISTORY_KEEP_ALL, the
 * dds_writedispose operation on the writer may block if the modification
 * would cause data to be lost because one of the limits, specified in the
 * resource_limits QoS policy, to be exceeded. In case the synchronous
 * attribute value of the reliability Qos policy is set to true for
 * communicating writers and readers then the writer will wait until
 * all synchronous readers have acknowledged the data. Under these
 * circumstances, the max_blocking_time attribute of the reliability
 * QoS policy configures the maximum time the dds_writedispose operation
 * may block.
 * If max_blocking_time elapses before the writer is able to store the
 * modification without exceeding the limits and all expected acknowledgements
 * are received, the dds_writedispose operation will fail and returns
 * DDS_RETCODE_TIMEOUT.
 *
 * @param[in]  writer The writer to dispose the data instance from.
 * @param[in]  data   The data to be written and disposed.
 *
 * @returns  0 - Success.
 * @returns <0 - Failure (use dds_err_nr() to get error value).
 *
 * @retval DDS_RETCODE_OK
 *                The sample is written and the instance is marked for deletion.
 * @retval DDS_RETCODE_ERROR
 *                An internal error has occurred.
 * @retval DDS_RETCODE_BAD_PARAMETER
 *                At least one of the arguments is invalid.
 * @retval DDS_RETCODE_ILLEGAL_OPERATION
 *                The operation is invoked on an inappropriate object.
 * @retval DDS_RETCODE_ALREADY_DELETED
 *                The entity has already been deleted.
 * @retval DDS_RETCODE_TIMEOUT
 *                Either the current action overflowed the available resources
 *                as specified by the combination of the reliability QoS policy,
 *                history QoS policy and resource_limits QoS policy, or the
 *                current action was waiting for data delivery acknowledgement
 *                by synchronous readers. This caused blocking of this operation,
 *                which could not be resolved before max_blocking_time of the
 *                reliability QoS policy elapsed.
 */
 dds_return_t
dds_writedispose(
        dds_entity_t writer,
        const void *data);