src/api/java5/jna-dds/src/main/java/org/eclipse/cyclonedds/ddsc/DdscLibrary.java

	/**
	 * @brief Resumes the publications of the Publisher<br>
	 * This operation is a hint to the Service to indicate that the application has completed changes<br>
	 * initiated by a previous @see suspend. The Service is not required to use the hint.<br>
	 * The call to resume_publications must match a previous call to @see suspend_publications.<br>
	 * @param[in]  publisher The publisher for which all publications will be resumed<br>
	 * @returns >0 - Success.<br>
	 * @returns <0 - Failure (use dds_err_nr() to get error value).<br>
	 * @retval DDS_RETCODE_OK<br>
	 *                Publications resumed successfully.<br>
	 * @retval DDS_RETCODE_BAD_PARAMETER<br>
	 *                The pub parameter is not a valid publisher.<br>
	 * @retval DDS_RETCODE_PRECONDITION_NOT_MET<br>
	 *                No previous matching @see dds_suspend.<br>
	 * @retval DDS_RETCODE_UNSUPPORTED<br>
	 *                Operation is not supported.<br>
	 * Original signature : <code>dds_return_t dds_resume(dds_entity_t)</code><br>
	 * <i>native declaration : dds2tmptmp.h:719</i>
	 */
	public static native DdscLibrary.dds_return_t dds_resume(DdscLibrary.dds_entity_t publisher);
	/**
	 * @brief Waits at most for the duration timeout for acks for data in the publisher or writer.<br>
	 * This operation blocks the calling thread until either all data written by the publisher<br>
	 * or writer is acknowledged by all matched reliable reader entities, or else the duration<br>
	 * specified by the timeout parameter elapses, whichever happens first.<br>
	 * @param[in]  pub_or_w   The publisher or writer whose acknowledgements must be waited for.<br>
	 * @returns >0 - Success.<br>
	 * @returns <0 - Failure (use dds_err_nr() to get error value).<br>
	 * @retval DDS_RETCODE_OK<br>
	 *                All acknowledgements successfully received with the timeout.<br>
	 * @retval DDS_RETCODE_BAD_PARAMETER<br>
	 *                The pub_or_w parameter is not a valid publisher or writer.<br>
	 * @retval DDS_RETCODE_TIMEOUT<br>
	 *                Timeout expired before all acknowledgements from reliable reader entities were received.<br>
	 * @retval DDS_RETCODE_UNSUPPORTED<br>
	 *                Operation is not supported.<br>
	 * Original signature : <code>dds_return_t dds_wait_for_acks(dds_entity_t, dds_duration_t)</code><br>
	 * <i>native declaration : dds2tmptmp.h:738</i>
	 */
	public static native DdscLibrary.dds_return_t dds_wait_for_acks(DdscLibrary.dds_entity_t publisher_or_writer, DdscLibrary.dds_duration_t timeout);
	/**
	 * @brief Creates a new instance of a DDS reader<br>
	 * @param[in]  participant_or_subscriber The participant or subscriber on which the reader is being created<br>
	 * @param[in]  topic The topic to read<br>
	 * @param[in]  qos The QoS to set on the new reader (can be NULL)<br>
	 * @param[in]  listener Any listener functions associated with the new reader (can be NULL)<br>
	 * @returns >0 - Success (valid handle of a reader entity)<br>
	 * @returns <0 - Failure (use dds_err_nr() to get error value)<br>
	 * Original signature : <code>dds_entity_t dds_create_reader(dds_entity_t, dds_entity_t, const dds_qos_t*, const dds_listener_t*)</code><br>
	 * <i>native declaration : dds2tmptmp.h:749</i>
	 */
	public static native DdscLibrary.dds_entity_t dds_create_reader(DdscLibrary.dds_entity_t participant_or_subscriber, DdscLibrary.dds_entity_t topic, DdscLibrary.dds_qos_t qos, DdscLibrary.dds_listener_t listener);
	/**
	 * @brief Creates a new instance of a DDS writer<br>
	 * @param[in]  participant_or_publisher The participant or publisher on which the writer is being created<br>
	 * @param[in]  topic The topic to write<br>
	 * @param[in]  qos The QoS to set on the new writer (can be NULL)<br>
	 * @param[in]  listener Any listener functions associated with the new writer (can be NULL)<br>
	 * @returns >0 - Success (valid handle of a writer entity)<br>
	 * @returns <0 - Failure (use dds_err_nr() to get error value)<br>
	 * Original signature : <code>dds_entity_t dds_create_writer(dds_entity_t, dds_entity_t, const dds_qos_t*, const dds_listener_t*)</code><br>
	 * <i>native declaration : dds2tmptmp.h:765</i>
	 */
	public static native DdscLibrary.dds_entity_t dds_create_writer(DdscLibrary.dds_entity_t participant_or_publisher, DdscLibrary.dds_entity_t topic, DdscLibrary.dds_qos_t qos, DdscLibrary.dds_listener_t listener);
	/**
	 * Description : Registers an instance with a key value to the data writer<br>
	 * Arguments :<br>
	 *   -# wr The writer to which instance has be associated<br>
	 *   -# data Instance with the key value<br>
	 *   -# Returns an instance handle that could be used for successive write & dispose operations or<br>
	 *      NULL, if handle is not allocated<br>
	 * Original signature : <code>dds_return_t dds_register_instance(dds_entity_t, dds_instance_handle_t*, const void*)</code><br>
	 * <i>native declaration : dds2tmptmp.h:775</i>
	 */
	public static native DdscLibrary.dds_return_t dds_register_instance(DdscLibrary.dds_entity_t writer, LongBuffer handle, Pointer data);
	/**
	 * Description : Unregisters an instance with a key value from the data writer. Instance can be identified<br>
	 *               either from data sample or from instance handle (at least one must be provided).<br>
	 * Arguments :<br>
	 *   -# wr The writer to which instance is associated<br>
	 *   -# data Instance with the key value (can be NULL if handle set)<br>
	 *   -# handle Instance handle (can be DDS_HANDLE_NIL if data set)<br>
	 *   -# Returns 0 on success, or non-zero value to indicate an error<br>
	 * Note : If an unregistered key ID is passed as instance data, an error is logged and not flagged as return value<br>
	 * Original signature : <code>dds_return_t dds_unregister_instance(dds_entity_t, const void*)</code><br>
	 * <i>native declaration : dds2tmptmp.h:787</i>
	 */
	public static native DdscLibrary.dds_return_t dds_unregister_instance(DdscLibrary.dds_entity_t writer, Pointer data);
	/**
	 * Original signature : <code>dds_return_t dds_unregister_instance_ih(dds_entity_t, dds_instance_handle_t)</code><br>
	 * <i>native declaration : dds2tmptmp.h:789</i>
	 */
	public static native DdscLibrary.dds_return_t dds_unregister_instance_ih(DdscLibrary.dds_entity_t writer, long handle);
	/**
	 * Original signature : <code>dds_return_t dds_unregister_instance_ts(dds_entity_t, const void*, dds_time_t)</code><br>
	 * <i>native declaration : dds2tmptmp.h:791</i>
	 */
	public static native DdscLibrary.dds_return_t dds_unregister_instance_ts(DdscLibrary.dds_entity_t writer, Pointer data, DdscLibrary.dds_time_t timestamp);
	/**
	 * Original signature : <code>dds_return_t dds_unregister_instance_ih_ts(dds_entity_t, dds_instance_handle_t, dds_time_t)</code><br>
	 * <i>native declaration : dds2tmptmp.h:793</i>
	 */
	public static native DdscLibrary.dds_return_t dds_unregister_instance_ih_ts(DdscLibrary.dds_entity_t writer, long handle, DdscLibrary.dds_time_t timestamp);
	/**
	 * @brief This operation modifies and disposes a data instance.<br>
	 * This operation requests the Data Distribution Service to modify the instance and<br>
	 * mark it for deletion. Copies of the instance and its corresponding samples, which are<br>
	 * stored in every connected reader and, dependent on the QoS policy settings (also in<br>
	 * the Transient and Persistent stores) will be modified and marked for deletion by<br>
	 * setting their dds_instance_state_t to DDS_IST_NOT_ALIVE_DISPOSED.<br>
	 * <b><i>Blocking</i></b><br>
	 * If the history QoS policy is set to DDS_HISTORY_KEEP_ALL, the<br>
	 * dds_writedispose operation on the writer may block if the modification<br>
	 * would cause data to be lost because one of the limits, specified in the<br>
	 * resource_limits QoS policy, to be exceeded. In case the synchronous<br>
	 * attribute value of the reliability Qos policy is set to true for<br>
	 * communicating writers and readers then the writer will wait until<br>
	 * all synchronous readers have acknowledged the data. Under these<br>
	 * circumstances, the max_blocking_time attribute of the reliability<br>
	 * QoS policy configures the maximum time the dds_writedispose operation<br>
	 * may block.<br>
	 * If max_blocking_time elapses before the writer is able to store the<br>
	 * modification without exceeding the limits and all expected acknowledgements<br>
	 * are received, the dds_writedispose operation will fail and returns<br>
	 * DDS_RETCODE_TIMEOUT.<br>
	 * @param[in]  writer The writer to dispose the data instance from.<br>
	 * @param[in]  data   The data to be written and disposed.<br>
	 * @returns  0 - Success.<br>
	 * @returns <0 - Failure (use dds_err_nr() to get error value).<br>
	 * @retval DDS_RETCODE_OK<br>
	 *                The sample is written and the instance is marked for deletion.<br>
	 * @retval DDS_RETCODE_ERROR<br>
	 *                An internal error has occurred.<br>
	 * @retval DDS_RETCODE_BAD_PARAMETER<br>
	 *                At least one of the arguments is invalid.<br>
	 * @retval DDS_RETCODE_ILLEGAL_OPERATION<br>
	 *                The operation is invoked on an inappropriate object.<br>
	 * @retval DDS_RETCODE_ALREADY_DELETED<br>
	 *                The entity has already been deleted.<br>
	 * @retval DDS_RETCODE_TIMEOUT<br>
	 *                Either the current action overflowed the available resources<br>
	 *                as specified by the combination of the reliability QoS policy,<br>
	 *                history QoS policy and resource_limits QoS policy, or the<br>
	 *                current action was waiting for data delivery acknowledgement<br>
	 *                by synchronous readers. This caused blocking of this operation,<br>
	 *                which could not be resolved before max_blocking_time of the<br>
	 *                reliability QoS policy elapsed.<br>
	 * Original signature : <code>dds_return_t dds_writedispose(dds_entity_t, const void*)</code><br>
	 * <i>native declaration : dds2tmptmp.h:840</i>
	 */
	public static native DdscLibrary.dds_return_t dds_writedispose(DdscLibrary.dds_entity_t writer, Pointer data);
